# vs_code_qt

./: CMakeLists.txt  main.cpp
Paint/: painter.cpp  painter.h
encryption/: encrypt.cpp  func.hpp
